...
              : [{ flex: 1 }]
          }
        >
          {leftSlot}
          <Textarea
            ref={textAreaRef}
            testID="chat-input"
            numberOfLines={1}
            value={message}
            enterKeyHint="send"
            onSubmitEditing={(e) => {
              e.preventDefault();
              submit();
...
